# src/

bindir=$(prefix)/games

bin_PROGRAMS = exposer

exposer_SOURCES = \
       exposer.cxx   exposer.h   \
       floor.cxx     floor.h     \
       vertices.cxx  vertices.h  \
       boneGUI.cxx   boneGUI.h   \
       load_save.cxx load_save.h \
       timebox.cxx   timebox.h   \
       bones.cxx     bones.h     \
       event.cxx     event.h     \
       model.cxx     model.h

