# src/

bindir=$(prefix)/games

bin_PROGRAMS = ttt3d

ttt3d_SOURCES = \
       ttt3d.cxx gfx.cxx material.cxx gui.cxx status.cxx sound.cxx \
       cell.cxx puzzle.cxx game.cxx \
       p3d.h gfx.h gui.h material.h status.h sound.h \
       cell.h puzzle.h level.h game.h

INCLUDES = -I/usr/local/plib/include

