noinst_PROGRAMS = simple complex widget_list

simple_SOURCES  = simple.cxx

complex_SOURCES = complex.cxx

widget_list_SOURCES = widget_list.cxx

simple_LDADD = -lplibpu -lplibfnt -lplibsg -lplibul

complex_LDADD = -lplibpu -lplibfnt -lplibsg -lplibul

widget_list_LDADD = -lplibpu -lplibfnt -lplibsg -lplibul

EXTRA_DIST = complex.dsp simple.dsp


