noinst_PROGRAMS = simple complex widget_list PointPicker

simple_SOURCES  = simple.cxx

complex_SOURCES = complex.cxx

widget_list_SOURCES = widget_list.cxx

PointPicker_SOURCES = PointPicker.cxx

simple_LDADD = -lplibpu -lplibfnt -lplibsg -lplibul

complex_LDADD = -lplibpu -lplibfnt -lplibsg -lplibul

widget_list_LDADD = -lplibpu -lplibfnt -lplibsg -lplibul

PointPicker_LDADD = -lplibpu -lplibfnt -lplibsg -lplibul

EXTRA_DIST = complex.dsp simple.dsp


