
lib_LIBRARIES = libplibssgaux.a

include_HEADERS = ssgAux.h ssgaShapes.h

libplibssgaux_a_SOURCES = ssgAux.cxx ssgaShapes.cxx ssgaPatch.cxx ssgaTeapot.cxx

INCLUDES = -I$(top_srcdir)/src/sg -I$(top_srcdir)/src/ssg
INCLUDES += -I$(top_srcdir)/src/util                                                                               

EXTRA_DIST = ssgAux.dsp

