noinst_PROGRAMS = tux_example bend WavingFlagDemo

tux_example_SOURCES = tux_example.cxx
bend_SOURCES = bend.cxx
WavingFlagDemo_SOURCES = WavingFlag.cxx WavingFlagDemo.cxx

tux_example_LDADD = -lplibssg -lplibsg -lplibul
bend_LDADD = -lplibssg -lplibsg -lplibul
WavingFlagDemo_LDADD = -lplibssg -lplibsg -lplibul

EXTRA_DIST = tux_example.dsp bend.dsp WavingFlag.dsp

