noinst_PROGRAMS = tux_example WavingFlagDemo

tux_example_SOURCES = tux_example.cxx
include_HEADERS = WavingFlag.h
WavingFlagDemo_SOURCES = WavingFlag.cxx WavingFlagDemo.cxx

tux_example_LDADD = -lplibssg -lplibsg -lplibul
WavingFlagDemo_LDADD = -lplibssg -lplibsg -lplibul

EXTRA_DIST = tux_example.dsp WavingFlag.dsp

