noinst_PROGRAMS = tux_example WavingFlagDemo

tux_example_SOURCES = tux_example.cxx
WavingFlagDemo_SOURCES = WavingFlag.cxx WavingFlagDemo.cxx WavingFlag.h

tux_example_LDADD = -lplibssg -lplibsg -lplibul $(GLUT_LIBS) $(OGL_LIBS)
WavingFlagDemo_LDADD = -lplibssg -lplibsg -lplibul $(GLUT_LIBS) $(OGL_LIBS)

EXTRA_DIST = tux_example.dsp WavingFlag.dsp

