# src/

bindir=$(prefix)/games

bin_PROGRAMS = exposer merge_tweens

exposer_SOURCES = \
       exposer.cxx   exposer.h   \
       floor.cxx     floor.h     \
       vertices.cxx  vertices.h  \
       boneGUI.cxx   boneGUI.h   \
       load_save.cxx load_save.h \
       timebox.cxx   timebox.h   \
       bones.cxx     bones.h     \
       event.cxx     event.h     \
       model.cxx     model.h

merge_tweens_SOURCES = \
       merge_tweens.cxx   merge_tweens.h

