if BUILD_FNT

noinst_PROGRAMS = fnt_test slideshow

fnt_test_SOURCES = fnt_test.cxx

slideshow_SOURCES = slideshow.cxx

fnt_test_LDADD = -lplibfnt -lplibsg -lplibul $(GLUT_LIBS) $(OGL_LIBS)
slideshow_LDADD = -lplibfnt -lplibsg -lplibul $(GLUT_LIBS) $(OGL_LIBS)

endif

EXTRA_DIST = fnt_test.dsp slideshow.dsp

